# dialogue-macro

./: .gitignore  404.html  Cargo.toml  README.md  index.html  print.html  quickstart.html  searchindex.js  searchindex.json
.github/workflows/: CI.yaml
advanced/: enum.html  index.html  subasker.html  theme.html
dialogue-core/: Cargo.toml  README.md
dialogue-core/src/: asker.rs  define.rs  dialogue.rs  dialoguer.rs  enum_asker.rs  lib.rs  utils.rs
dialogue-core/src/define/: generate_struct.rs  impl_dialogue_item.rs
dialogue-core/src/dialogue/: dialogue_type.rs  parse_field_attribute.rs
dialogue-core/src/dialoguer_list/: confirm.rs  input.rs  mod.rs  multiselect.rs  password.rs  select.rs  sub_asker.rs
dialogue-core/tests/: 01-parse.rs  02-named_field.rs  03-parse_field_attribute.rs  04-field_attribute_error.rs  05-field_attribute_error.rs  06-field_attribute_error.rs  07-finish_parse.rs
dialogue-macro/: Cargo.toml
dialogue-macro/src/: lib.rs
dialogue-macro/tests/: 02-named_field.stderr  04-field_attribute_error.stderr  05-field_attribute_error.stderr  06-field_attribute_error.rs  06-field_attribute_error.stderr  07-finish_parse.rs  progress.rs
example/: confirm.rs  define.rs  input.rs  multi_select.rs  number.rs  select.rs  test.rs
example/dialogue/: confirm.rs  input.rs  multiselect.rs  password.rs  select.rs
example/dialogue-define/: confirm.rs  input.rs  multiselect.rs  password.rs  select.rs
examples/: confirm.rs  enum.rs  example.rs  input.rs  multiselect.rs  password.rs  quickstart.rs  select.rs  sub_asker.rs
guide/: book.toml  confirm.html  index.html  input.html  multiselect.html  password.html  select.html
guide/src/: SUMMARY.md  introduction.md  quickstart.md
guide/src/advanced/: enum.md  index.md  subasker.md  theme.md
guide/src/guide/: confirm.md  index.md  input.md  multiselect.md  password.md  select.md
guide/theme/: index.hbs
guide/theme/custom/: main.js  translate.css
src/: lib.rs  theme.rs
tests/: pass.rs  progress.rs
tests/fail/: 01-struct.rs  01-struct.stderr  02-theme.rs  02-theme.stderr  confirm.rs  confirm.stderr  input.rs  input.stderr  password.rs  password.stderr
theme/custom/: main.js
