[package]
name = "dialogue-macro"
version = "0.2.0"
edition = "2021"
authors = ["yexiyue"]
keywords = ["rust", "macro", "dialogue"]
description = "a macro for dialogue"
repository = "https://github.com/yexiyue/dialogue-macro"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialogue-core = { path = "./dialogue-core", version = "0.2.0" }
dialoguer = "0.11.0"

[workspace]
members = ["dialogue-core"]

[[example]]
name = "input"
path = "./example/dialogue/input.rs"

[[example]]
name = "test"
path = "./example/test.rs"
