[package]
name = "dialogue-macro"
version = "0.3.1"
edition = "2021"
authors = ["yexiyue"]
autotests = false
keywords = ["rust", "macro", "dialoguer"]
description = "An extension to dialoguer that simplifies command-line interaction interfaces."
repository = "https://github.com/yexiyue/dialogue-macro"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialogue-core = { path = "./dialogue-core", version = "0.3.1" }
dialoguer = "0.11.0"



[dev-dependencies]
trybuild = { version = "1.0.85", features = ["diff"] }

[[test]]
name = "tests"
path = "./tests/progress.rs"

[workspace]
members = ["dialogue-core"]
