[package]
name = "dialogue-core"
version = "0.3.2"
edition = "2021"
authors = ["yexiyue"]
keywords = ["rust", "macro", "dialogue"]
description = "the core of dialogue-macro"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits", "full"] }

[lib]
proc-macro = true
